--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-polyfill": "^6.26.0",
     "cssnano": "^3.10.0",
     "exif": "^0.6.0",
+    "jquery": "^3.3.1",
     "lib-flexible": "^0.3.2",
     "lrz": "^4.9.40",
     "postcss-aspect-ratio-mini": "0.0.2",
