--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "cssnano": "^3.10.0",
     "exif": "^0.6.0",
     "jquery": "^3.3.1",
     "lib-flexible": "^0.3.2",
     "lrz": "^4.9.40",
+    "mui": "0.0.1",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-px-to-viewport": "0.0.3",
