--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.3.1",
     "lib-flexible": "^0.3.2",
     "lrz": "^4.9.40",
+    "mint-ui": "^2.2.13",
     "mui": "0.0.1",
     "postcss-aspect-ratio-mini": "0.0.2",
     "postcss-cssnext": "^3.1.0",
@@ -38,6 +39,7 @@
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
